Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-39761

Assertion `!table->blob_storage' failed in Field_geom::store

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • N/A
    • N/A
    • GIS
    • None
    • Not for Release Notes

    Description

      CREATE TABLE t (f GEOMETRY);
      INSERT INTO t VALUES (POINT(1,1));
      SELECT GROUP_CONCAT(IF(TRUE, f, POINT(0,0)) ORDER BY 1) FROM t;
       
      DROP TABLE t;
      

      bb-blob-monty a4993c3dce5f47e2999ae787e421b146c5dc45e6

      mariadbd: /data/bld/testing/bb-blob-monty-debug/sql/sql_type_geom.cc:843: virtual int Field_geom::store(const char*, size_t, CHARSET_INFO*): Assertion `!table->blob_storage' failed.
      260526 21:37:31 [ERROR] /share8t/bld/testing/bb-blob-monty-debug/sql/mariadbd got signal 6 ;
       
      #8  0x00007f43d3445395 in __assert_fail_base (fmt=0x7f43d35b9a90 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x55cb2fd7b548 "!table->blob_storage", file=file@entry=0x55cb2fd7b210 "/data/bld/testing/bb-blob-monty-debug/sql/sql_type_geom.cc", line=line@entry=843, function=function@entry=0x55cb2fd7b560 "virtual int Field_geom::store(const char*, size_t, CHARSET_INFO*)") at ./assert/assert.c:92
      #9  0x00007f43d3453eb2 in __GI___assert_fail (assertion=0x55cb2fd7b548 "!table->blob_storage", file=0x55cb2fd7b210 "/data/bld/testing/bb-blob-monty-debug/sql/sql_type_geom.cc", line=843, function=0x55cb2fd7b560 "virtual int Field_geom::store(const char*, size_t, CHARSET_INFO*)") at ./assert/assert.c:101
      #10 0x000055cb2f080d26 in Field_geom::store (this=0x7f43b0052218, from=0x7f43b0045366 "", length=25, cs=0x55cb30922c80 <my_charset_bin>) at /data/bld/testing/bb-blob-monty-debug/sql/sql_type_geom.cc:843
      #11 0x000055cb2f1bb90b in Item::save_str_in_field (this=0x7f43b0016160, field=0x7f43b0052218, no_conversions=true) at /data/bld/testing/bb-blob-monty-debug/sql/item.cc:7094
      #12 0x000055cb2f05add2 in Type_handler_string_result::Item_save_in_field (this=0x55cb30b40280 <type_handler_geometry>, item=0x7f43b0016160, field=0x7f43b0052218, no_conversions=true) at /data/bld/testing/bb-blob-monty-debug/sql/sql_type.cc:4436
      #13 0x000055cb2f1bbc17 in Item::save_in_field (this=0x7f43b0016160, field=0x7f43b0052218, no_conversions=true) at /data/bld/testing/bb-blob-monty-debug/sql/item.cc:7142
      #14 0x000055cb2ec1ae98 in Item_result_field::save_in_result_field (this=0x7f43b0016160, no_conversions=true) at /data/bld/testing/bb-blob-monty-debug/sql/item.h:3622
      #15 0x000055cb2ee3cb86 in copy_funcs (func_ptr=0x7f43b0051db8, thd=0x7f43b0000dc8) at /data/bld/testing/bb-blob-monty-debug/sql/sql_select.cc:28959
      #16 0x000055cb2f2cd02a in Item_func_group_concat::add (this=0x7f43b0016360, exclude_nulls=true) at /data/bld/testing/bb-blob-monty-debug/sql/item_sum.cc:4193
      #17 0x000055cb2f01e2fa in Item_func_group_concat::add (this=0x7f43b0016360) at /data/bld/testing/bb-blob-monty-debug/sql/item_sum.h:2109
      #18 0x000055cb2f2cf628 in Aggregator_simple::add (this=0x7f43b0019ce0) at /data/bld/testing/bb-blob-monty-debug/sql/item_sum.h:737
      #19 0x000055cb2ec1b2dd in Item_sum::aggregator_add (this=0x7f43b0016360) at /data/bld/testing/bb-blob-monty-debug/sql/item_sum.h:570
      #20 0x000055cb2ec1b254 in Item_sum::reset_and_add (this=0x7f43b0016360) at /data/bld/testing/bb-blob-monty-debug/sql/item_sum.h:452
      #21 0x000055cb2ee3ca7f in init_sum_functions (func_ptr=0x7f43b00182c0, end_ptr=0x7f43b00182c8) at /data/bld/testing/bb-blob-monty-debug/sql/sql_select.cc:28911
      #22 0x000055cb2ee31d4d in end_send_group (join=0x7f43b0017930, join_tab=0x0, end_of_records=false) at /data/bld/testing/bb-blob-monty-debug/sql/sql_select.cc:24803
      #23 0x000055cb2ee2cb75 in do_select (join=0x7f43b0017930, procedure=0x0) at /data/bld/testing/bb-blob-monty-debug/sql/sql_select.cc:22730
      #24 0x000055cb2edfa746 in JOIN::exec_inner (this=0x7f43b0017930) at /data/bld/testing/bb-blob-monty-debug/sql/sql_select.cc:5023
      #25 0x000055cb2edf9836 in JOIN::exec (this=0x7f43b0017930) at /data/bld/testing/bb-blob-monty-debug/sql/sql_select.cc:4807
      #26 0x000055cb2edfb0df in mysql_select (thd=0x7f43b0000dc8, tables=0x7f43b00168c0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2164525824, result=0x7f43b0017908, unit=0x7f43b0005298, select_lex=0x7f43b0015908) at /data/bld/testing/bb-blob-monty-debug/sql/sql_select.cc:5285
      #27 0x000055cb2ede91e2 in handle_select (thd=0x7f43b0000dc8, lex=0x7f43b00051c0, result=0x7f43b0017908, setup_tables_done_option=0) at /data/bld/testing/bb-blob-monty-debug/sql/sql_select.cc:601
      #28 0x000055cb2ed8a969 in execute_sqlcom_select (thd=0x7f43b0000dc8, all_tables=0x7f43b00168c0) at /data/bld/testing/bb-blob-monty-debug/sql/sql_parse.cc:6463
      #29 0x000055cb2ed815f6 in mysql_execute_command (thd=0x7f43b0000dc8, is_called_from_prepared_stmt=false) at /data/bld/testing/bb-blob-monty-debug/sql/sql_parse.cc:4042
      #30 0x000055cb2ed8f9f1 in mysql_parse (thd=0x7f43b0000dc8, rawbuf=0x7f43b0015830 "SELECT GROUP_CONCAT(IF(TRUE, f, POINT(0,0)) ORDER BY 1) FROM t", length=62, parser_state=0x7f43cd554360) at /data/bld/testing/bb-blob-monty-debug/sql/sql_parse.cc:8223
      #31 0x000055cb2ed7acec in dispatch_command (command=COM_QUERY, thd=0x7f43b0000dc8, packet=0x7f43b000bc29 "", packet_length=62, blocking=true) at /data/bld/testing/bb-blob-monty-debug/sql/sql_parse.cc:1924
      #32 0x000055cb2ed7960b in do_command (thd=0x7f43b0000dc8, blocking=true) at /data/bld/testing/bb-blob-monty-debug/sql/sql_parse.cc:1434
      #33 0x000055cb2ef783bb in do_handle_one_connection (connect=0x55cb6e3ec1d8, put_in_cache=true) at /data/bld/testing/bb-blob-monty-debug/sql/sql_connect.cc:1475
      #34 0x000055cb2ef7813c in handle_one_connection (arg=0x55cb6e3e9c38) at /data/bld/testing/bb-blob-monty-debug/sql/sql_connect.cc:1387
      #35 0x000055cb2f4c4544 in pfs_spawn_thread (arg=0x55cb6e3e8198) at /data/bld/testing/bb-blob-monty-debug/storage/perfschema/pfs.cc:2201
      #36 0x00007f43d34a81c4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #37 0x00007f43d352885c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.