MDEV-39761: fix `Field_geom::store()` assertion in GROUP_CONCAT with geometry expressions

`Field_geom::store()` asserts `!table->blob_storage`, but GROUP_CONCAT
with ORDER BY or DISTINCT sets `blob_storage` on its internal temp table.
When geometry expressions (IF, CASE, COALESCE, DEFAULT, etc.) appear as
GROUP_CONCAT arguments, the type handler field creation path creates
`Field_geom` directly, bypassing the existing downgrade in
`Field_blob::make_new_field()` that converts `Field_geom` to plain
`Field_blob` for GROUP_CONCAT temp tables.

Fix: downgrade geometry to `Field_blob` (via `type_handler_long_blob`) in
both field creation paths that expressions can take:
- `create_tmp_field_ex_from_handler()` for `Item_result_field` items
- `tmp_table_field_from_field_type()` for `Item_default_value` and other
  callers that bypass the handler path